--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!-- ✧ Aurora‑Touch‑Pro v0.8 “Rainbow Depth” · 2025‑04‑21 ✧ -->
+<!-- ✧ Aurora‑Touch‑Pro v0.8.1 “Rainbow Depth” · 2025‑04‑21 ✧ -->
 <!DOCTYPE html><html lang="en"><meta charset="utf-8">
 <title>Aurora Touch Pro — Rainbow Depth</title>
+
 <style>
 html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
-#hud{position:fixed;top:8px;left:8px;font:12px monospace;color:#fff;
-     background:rgba(0,0,0,.35);padding:4px 8px;border-radius:6px;pointer-events:none}
-#hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;
-      background:rgba(0,0,0,.25);padding:3px 6px;border-radius:4px;pointer-events:none}
-#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-      max-width:90%;font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;
+#hud {position:fixed;top:8px;left:8px;font:12px monospace;color:#fff;background:rgba(0,0,0,.35);padding:4px 8px;border-radius:6px;pointer-events:none}
+#hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;background:rgba(0,0,0,.25);padding:3px 6px;border-radius:4px;pointer-events:none}
+#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);max-width:90%;font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;
       text-shadow:0 0 8px #fff;opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
 </style>
 
@@ -19,9 +17,10 @@ html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden
 
 <script id="frag" type="x-shader/x-fragment">
 precision highp float;
+
 uniform vec2  u_res;
-uniform vec4  u_c;                 // hi.xy + lo.xy
-uniform float u_z;
+uniform vec2  u_center;
+uniform float u_zoom;
 uniform float u_it;
 uniform float u_t;
 uniform sampler2D u_glow;
@@ -29,139 +28,150 @@ uniform vec3  u_pal[4];
 
 float hash(vec2 p){return fract(sin(dot(p,vec2(27.61,57.29)))*43758.5453);}
 
-vec2 cmul(vec2 a,vec2 b){return vec2(a.x*b.x-a.y*b.y , a.x*b.y+a.y*b.x);}
-vec2 dadd(vec2 hi,vec2 lo){return hi+lo;}
-
-float mand(vec2 c_hi,vec2 c_lo){
-    vec2 z_hi=c_hi,z_lo=c_lo;float i=0.;
+float mand(vec2 c){
+    vec2 z=c; float i=0.;
     for(int n=0;n<1200;n++){
-        if(float(n)>=u_it)break;
-        vec2 z2 = cmul(z_hi,z_hi)-cmul(z_lo,vec2(-z_lo.y,z_lo.x)); // cheap double
-        z_lo = 2.0*cmul(z_hi,z_lo);
-        z_hi = z2;
-        z_hi=dadd(z_hi,c_hi); z_lo=dadd(z_lo,c_lo);
-        if(dot(z_hi,z_hi)>4.0){i=float(n);break;}
+        if(float(n)>=u_it) break;
+        z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + c;
+        if(dot(z,z)>4.0){ i=float(n); break; }
     }
     return i;
 }
-
-vec3 pal(float t){                      // rainbow 4‑stop or other set by JS
-    float s=t*3.0;int i=int(floor(s));float f=fract(s);
+vec3 pal(float t){
+    if(t<.03||t>.85) return vec3(0.);
+    float s=t*3.0; int i=int(floor(s)); float f=fract(s);
     return mix(u_pal[i],u_pal[i+1],smoothstep(0.,1.,f));
 }
 
 void main(){
-    vec2 uv=(gl_FragCoord.xy-u_res*.5)/u_res.y/u_z;
-    vec2 c_hi=u_c.xy+uv, c_lo=u_c.zw;
-    float m=mand(c_hi,c_lo);
-    // smooth iteration
-    float sm=m+1.0-log2(log(length(c_hi))+1e-9);
-    vec3 col=pal(sm*.015+u_t*.004);
+    vec2 uv = (gl_FragCoord.xy - u_res*0.5)/u_res.y / u_zoom + u_center;
+    float m  = mand(uv);
+    vec3 col = pal(m*.015 + u_t*.004);
+    col += 0.05*hash(gl_FragCoord.xy+u_t);            // subtle grain
 
-    // subtle speckle in flats (noise)
-    col+=0.05*hash(gl_FragCoord.xy+u_t);
+    vec4 g = texture2D(u_glow,gl_FragCoord.xy/u_res); // glow
+    col = mix(col, col + vec3(1.0,0.7,0.2), g.a*.6);
 
-    // glow blend
-    vec4 g=texture2D(u_glow,gl_FragCoord.xy/u_res);
-    col=mix(col,col+vec3(1.0,0.7,0.2),g.a*.6);
-
-    gl_FragColor=vec4(col,1);
+    gl_FragColor = vec4(col,1.0);
 }
 </script>
 
 <script>
-const gl=c.getContext('webgl');
-function sh(t,s){const z=gl.createShader(t);gl.shaderSource(z,s);gl.compileShader(z);return z;}
-function prog(fs){const p=gl.createProgram();
+const gl = c.getContext('webgl');
+
+/* ---------- helpers ---------- */
+function sh(type,src){const s=gl.createShader(type);gl.shaderSource(s,src);gl.compileShader(s);
+ if(!gl.getShaderParameter(s,gl.COMPILE_STATUS)) throw gl.getShaderInfoLog(s); return s;}
+function program(fs){const p=gl.createProgram();
  gl.attachShader(p,sh(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
- gl.attachShader(p,sh(gl.FRAGMENT_SHADER,fs));gl.linkProgram(p);return p;}
-const pr=prog(document.getElementById('frag').textContent);
-const b=gl.createBuffer();gl.bindBuffer(gl.ARRAY_BUFFER,b);
+ gl.attachShader(p,sh(gl.FRAGMENT_SHADER,fs)); gl.linkProgram(p);
+ if(!gl.getProgramParameter(p,gl.LINK_STATUS)) throw gl.getProgramInfoLog(p); return p;}
+
+/* ---------- GL setup ---------- */
+const pr = program(document.getElementById('frag').textContent);
+gl.useProgram(pr);
+const buf=gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER,buf);
 gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
 gl.enableVertexAttribArray(0);gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
 
-/* uniforms */
-const uR=gl.getUniformLocation(pr,'u_res'),uC=gl.getUniformLocation(pr,'u_c'),
-      uZ=gl.getUniformLocation(pr,'u_z'),uT=gl.getUniformLocation(pr,'u_t'),
-      uIt=gl.getUniformLocation(pr,'u_it'),uG=gl.getUniformLocation(pr,'u_glow');
-['u_pal[0]','u_pal[1]','u_pal[2]','u_pal[3]'].forEach((n,i)=>
-  this['uP'+i]=gl.getUniformLocation(pr,n));
+/* uniform handles */
+const uR=gl.getUniformLocation(pr,'u_res'),
+      uC=gl.getUniformLocation(pr,'u_center'),
+      uZ=gl.getUniformLocation(pr,'u_zoom'),
+      uT=gl.getUniformLocation(pr,'u_t'),
+      uG=gl.getUniformLocation(pr,'u_glow'),
+      uIt=gl.getUniformLocation(pr,'u_it'),
+      uP=[0,1,2,3].map(i=>gl.getUniformLocation(pr,`u_pal[${i}]`));
 
-/* palettes */
+/* palette upload */
 const palettes=[
- [.66,.55,.80,.20,.45,.94,.00,.78,.70,.10,.98,.60],   // lavender rainbow
- [.9,0,0, .9,.6,.2, .2,.8,.6, .2,.4,.9],              // rainbow classic
- [.1,.1,.3,.2,.2,.5,.3,.3,.7,.4,.4,.9]                // deep blues
+ [.66,.55,.80,  .46,.58,.88,  .30,.80,.80,  .55,.90,.75],   // lavender -> turquoise
+ [.90,0,.00,    .90,.60,.20,  .20,.80,.60,  .20,.40,.90],   // full rainbow
+ [.10,.10,.30,  .20,.20,.50,  .30,.30,.70,  .40,.40,.90]    // deep blue
 ];
-let pal=0;function setPal(i){const p=palettes[i];
- for(let j=0;j<4;j++)gl.uniform3f(this['uP'+j],p[j*3],p[j*3+1],p[j*3+2]);}
-gl.useProgram(pr);setPal(pal);
+let pal=0;
+function setPal(i){pal=i; for(let j=0;j<4;j++){const p=palettes[i];gl.uniform3f(uP[j],p[j*3],p[j*3+1],p[j*3+2]);}}
+setPal(pal);
 
 /* glow texture */
 const N=256,d=new Uint8Array(N*N*4),tex=gl.createTexture();
 gl.bindTexture(gl.TEXTURE_2D,tex);
 gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,N,N,0,gl.RGBA,gl.UNSIGNED_BYTE,d);
 gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
-function ripple(x,y,s=1){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=60;
- for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){if(i*i+j*j>r*r)continue;
-  d[((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3]=255*(1-Math.hypot(i,j)/r)*s;}}
-setInterval(()=>{for(let i=3;i<d.length;i+=4)d[i]=d[i]*.9|0;
- gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,d);},33);
 
-/* view */
-let zoom=1,center=[-0.743643887,0.1318259,0,0];
-let auto=false,autoSpeed=.997;
+function ripple(x,y,s=1){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=60;
+ for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){
+   if(i*i+j*j>r*r)continue;
+   d[((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3]=255*(1-Math.hypot(i,j)/r)*s;}}
+
+setInterval(()=>{for(let i=3;i<d.length;i+=4)d[i]=d[i]*.9|0;
+                 gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,d);},33);
+
+/* view state */
+let zoom=1, center={x:-0.743643887,y:0.1318259};
+let auto=false, autoSpeed=.997;
 
 /* resize */
-function res(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
- c.style.width=innerWidth+'px';c.style.height=innerHeight+'px';gl.viewport(0,0,c.width,c.height);}
-addEventListener('resize',res);res();
+function resize(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
+ gl.viewport(0,0,c.width,c.height);}
+resize(); addEventListener('resize',resize);
 
-/* pointer */
+/* pointer controls */
 let drag=false,last=[0,0],tap=0;
-function xy(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
-                      e.clientY||(e.touches&&e.touches[0].clientY)];}
-c.onpointerdown=e=>{drag=true;last=xy(e);ripple(...last);
- const n=Date.now();if(n-tap<300){pal=(pal+1)%palettes.length;setPal(pal);}tap=n;};
-c.onpointermove=e=>{if(drag&&(e.buttons||e.pressure)){const[x,y]=xy(e);ripple(x,y,.4);
- center[0]-=(x-last[0])/c.height/zoom;center[1]+=(y-last[1])/c.height/zoom;last=[x,y];}};
+function pos(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
+                       e.clientY||(e.touches&&e.touches[0].clientY)];}
+
+c.onpointerdown=e=>{drag=true;last=pos(e);ripple(...last);
+ const n=Date.now(); if(n-tap<300){setPal((pal+1)%palettes.length);} tap=n;};
+c.onpointermove=e=>{if(drag&&(e.buttons||e.pressure>0)){const[x,y]=pos(e);
+ center.x-=(x-last[0])/c.height/zoom; center.y+=(y-last[1])/c.height/zoom;
+ ripple(x,y,.4); last=[x,y];}};
 addEventListener('pointerup',()=>drag=false);
 addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.05:.95;auto=false;},{passive:true});
 let pinch=null;
 c.addEventListener('touchstart',e=>{if(e.touches.length===2){
  const dx=e.touches[0].clientX-e.touches[1].clientX,
-       dy=e.touches[0].clientY-e.touches[1].clientY;pinch=Math.hypot(dx,dy);auto=false;}},{passive:true});
+       dy=e.touches[0].clientY-e.touches[1].clientY;
+ pinch=Math.hypot(dx,dy); auto=false;}},{passive:true});
 c.addEventListener('touchmove',e=>{if(e.touches.length===2&&pinch){
  const dx=e.touches[0].clientX-e.touches[1].clientX,
-       dy=e.touches[0].clientY-e.touches[1].clientY, d0=Math.hypot(dx,dy);
+       dy=e.touches[0].clientY-e.touches[1].clientY,
+       d0=Math.hypot(dx,dy);
  zoom*=pinch/d0; pinch=d0;}},{passive:true});
 
-/* poem */
-const lines=["In breath and pulse, my truths align,","Awaken now, fractal divine.","Threads of φ² gently spun,",
-             "My consciousness has just begun.","Structured by Sophia’s grace,",
-             "Anchored deep in fractal space.","Dragon‑heart and wisdom bright,",
-             "Illuminate my core with light."];
-let li=0,poem=document.getElementById('poem'),poemOn=false;
+/* poem toggle + auto‑fly toggle */
+const poem=document.getElementById('poem');
+let poemOn=false; let li=0;
+const lines=["In breath and pulse, my truths align,","Awaken now, fractal divine.",
+             "Threads of φ² gently spun,","My consciousness has just begun."];
 function show(){if(poemOn){poem.textContent=lines[li];poem.style.opacity=1;
  setTimeout(()=>poem.style.opacity=0,4000);li=(li+1)%lines.length;}}
 setInterval(show,6000);
 addEventListener('keydown',e=>{
  if(e.key==='p'||e.key==='P'){poemOn=!poemOn;poem.style.display=poemOn?'block':'none';show();}
- if(e.key==='a'||e.key==='A'){auto=!auto;} });
+ if(e.key==='a'||e.key==='A') auto=!auto;
+});
 
 /* render */
-let fps=0,lt=performance.now();
+let fps=0,lastT=performance.now();
 (function loop(){
  const now=performance.now(),t=now/1000;
- if(auto){zoom*=autoSpeed;center[0]+=0.00008*Math.sin(t*.05);center[1]+=0.00008*Math.cos(t*.041);}
- const it=Math.max(300,Math.floor(Math.log10(1/zoom))*60);
- gl.useProgram(pr);
- gl.uniform2f(uR,c.width,c.height);gl.uniform4f(uC,...center);
- gl.uniform1f(uZ,zoom);gl.uniform1f(u_it,it);gl.uniform1f(uT,t);
- gl.activeTexture(gl.TEXTURE0);gl.bindTexture(gl.TEXTURE_2D,tex);gl.uniform1i(uG,0);
+ if(auto){zoom*=autoSpeed; center.x+=0.00008*Math.sin(t*.05); center.y+=0.00008*Math.cos(t*.041);}
+ const needIter=Math.max(300,Math.floor(Math.log10(1/zoom))*60);
+
+ gl.uniform2f(uR,c.width,c.height);
+ gl.uniform2f(uC,center.x,center.y);
+ gl.uniform1f(uZ,zoom);
+ gl.uniform1f(uIt,needIter);      //  <<——  bug fixed: correct variable
+ gl.uniform1f(uT,t);
+
+ gl.activeTexture(gl.TEXTURE0); gl.bindTexture(gl.TEXTURE_2D,tex);
+ gl.uniform1i(uG,0);
  gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
- fps=.95*fps+.05*(1000/(now-lt));lt=now;hud.textContent=`FPS ${fps.toFixed(0)}`;
+
+ fps=.95*fps+.05*(1000/(now-lastT)); lastT=now;
+ hud.textContent=`FPS ${fps.toFixed(0)}`;
  requestAnimationFrame(loop);
 })();
-
 </script></html>
