--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!-- ✧ Aurora‑Touch‑Pro v0.8.1 “Rainbow Depth” · 2025‑04‑21 ✧ -->
+<!-- ✧ Aurora‑Touch‑Pro v0.8.2 “Rainbow Depth – safe build” · 2025‑04‑21 ✧ -->
 <!DOCTYPE html><html lang="en"><meta charset="utf-8">
 <title>Aurora Touch Pro — Rainbow Depth</title>
-
 <style>
 html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
 #hud {position:fixed;top:8px;left:8px;font:12px monospace;color:#fff;background:rgba(0,0,0,.35);padding:4px 8px;border-radius:6px;pointer-events:none}
 #hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;background:rgba(0,0,0,.25);padding:3px 6px;border-radius:4px;pointer-events:none}
-#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);max-width:90%;font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;
-      text-shadow:0 0 8px #fff;opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
+#poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);max-width:90%;
+      font:min(7vw,34px)/1.5 Georgia,serif;color:#f0f0f0;text-align:center;text-shadow:0 0 8px #fff;
+      opacity:0;transition:opacity 2s ease-in-out;pointer-events:none;display:none}
 </style>
 
 <canvas id="c"></canvas>
@@ -15,163 +15,203 @@ html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden
 <div id="hint">zoom=pinch/wheel • pan=drag • tap=glow • dbl‑tap=palette • P=poem • A=auto‑fly</div>
 <div id="poem"></div>
 
+<!-- ── fragment shader ── -->
 <script id="frag" type="x-shader/x-fragment">
-precision highp float;
+precision mediump float;                 /* mediump = widest guaranteed on all mobiles */
 
 uniform vec2  u_res;
 uniform vec2  u_center;
 uniform float u_zoom;
-uniform float u_it;
+uniform float u_iter;
 uniform float u_t;
 uniform sampler2D u_glow;
-uniform vec3  u_pal[4];
+
+/* flattened palette stops */
+uniform vec3  u_pal0;
+uniform vec3  u_pal1;
+uniform vec3  u_pal2;
+uniform vec3  u_pal3;
 
 float hash(vec2 p){return fract(sin(dot(p,vec2(27.61,57.29)))*43758.5453);}
 
 float mand(vec2 c){
-    vec2 z=c; float i=0.;
-    for(int n=0;n<1200;n++){
-        if(float(n)>=u_it) break;
+    vec2 z=c; float i=0.0;
+    for(int n=0;n<1000;n++){
+        if(float(n)>=u_iter) break;
         z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + c;
-        if(dot(z,z)>4.0){ i=float(n); break; }
+        if(dot(z,z) > 4.0){ i=float(n); break; }
     }
     return i;
 }
-vec3 pal(float t){
-    if(t<.03||t>.85) return vec3(0.);
-    float s=t*3.0; int i=int(floor(s)); float f=fract(s);
-    return mix(u_pal[i],u_pal[i+1],smoothstep(0.,1.,f));
+
+vec3 pickPal(int idx){
+    if(idx==0) return u_pal0;
+    else if(idx==1) return u_pal1;
+    else if(idx==2) return u_pal2;
+    return u_pal3;
+}
+
+vec3 palette(float t){
+    if(t<.03||t>.85) return vec3(0.0);
+    float s = t*3.0;
+    int   i = int(floor(s));            /* 0,1,2 */
+    float f = fract(s);
+    return mix(pickPal(i), pickPal(i+1), smoothstep(0.0,1.0,f));
 }
 
 void main(){
-    vec2 uv = (gl_FragCoord.xy - u_res*0.5)/u_res.y / u_zoom + u_center;
+    vec2 uv = (gl_FragCoord.xy - u_res*0.5) / u_res.y / u_zoom + u_center;
     float m  = mand(uv);
-    vec3 col = pal(m*.015 + u_t*.004);
-    col += 0.05*hash(gl_FragCoord.xy+u_t);            // subtle grain
 
-    vec4 g = texture2D(u_glow,gl_FragCoord.xy/u_res); // glow
-    col = mix(col, col + vec3(1.0,0.7,0.2), g.a*.6);
+    /* smooth colouring */
+    float sm = m + 1.0 - log2(log(length(uv))+1e-6);
+    vec3 col = palette(sm*0.015 + u_t*0.004);
+
+    col += 0.04 * hash(gl_FragCoord.xy + u_t*10.0);          /* delicate grain */
+
+    vec4 g = texture2D(u_glow, gl_FragCoord.xy/u_res);
+    col = mix(col, col + vec3(1.0,0.7,0.25), g.a*0.6);       /* finger‑fire */
 
     gl_FragColor = vec4(col,1.0);
 }
 </script>
 
 <script>
-const gl = c.getContext('webgl');
-
-/* ---------- helpers ---------- */
-function sh(type,src){const s=gl.createShader(type);gl.shaderSource(s,src);gl.compileShader(s);
- if(!gl.getShaderParameter(s,gl.COMPILE_STATUS)) throw gl.getShaderInfoLog(s); return s;}
-function program(fs){const p=gl.createProgram();
- gl.attachShader(p,sh(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
- gl.attachShader(p,sh(gl.FRAGMENT_SHADER,fs)); gl.linkProgram(p);
- if(!gl.getProgramParameter(p,gl.LINK_STATUS)) throw gl.getProgramInfoLog(p); return p;}
-
 /* ---------- GL setup ---------- */
-const pr = program(document.getElementById('frag').textContent);
+const gl = c.getContext('webgl');
+function compile(type,src){const s=gl.createShader(type);gl.shaderSource(s,src);gl.compileShader(s);
+ if(!gl.getShaderParameter(s,gl.COMPILE_STATUS)) throw gl.getShaderInfoLog(s);return s;}
+const vs="attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}";
+
+const pr = gl.createProgram();
+gl.attachShader(pr,compile(gl.VERTEX_SHADER,vs));
+gl.attachShader(pr,compile(gl.FRAGMENT_SHADER,document.getElementById('frag').textContent));
+gl.linkProgram(pr); if(!gl.getProgramParameter(pr,gl.LINK_STATUS)) throw gl.getProgramInfoLog(pr);
 gl.useProgram(pr);
-const buf=gl.createBuffer();
+
+const buf = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER,buf);
 gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
 gl.enableVertexAttribArray(0);gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
 
 /* uniform handles */
-const uR=gl.getUniformLocation(pr,'u_res'),
-      uC=gl.getUniformLocation(pr,'u_center'),
-      uZ=gl.getUniformLocation(pr,'u_zoom'),
-      uT=gl.getUniformLocation(pr,'u_t'),
-      uG=gl.getUniformLocation(pr,'u_glow'),
-      uIt=gl.getUniformLocation(pr,'u_it'),
-      uP=[0,1,2,3].map(i=>gl.getUniformLocation(pr,`u_pal[${i}]`));
+const uR = gl.getUniformLocation(pr,'u_res'),
+      uC = gl.getUniformLocation(pr,'u_center'),
+      uZ = gl.getUniformLocation(pr,'u_zoom'),
+      uI = gl.getUniformLocation(pr,'u_iter'),
+      uT = gl.getUniformLocation(pr,'u_t'),
+      uG = gl.getUniformLocation(pr,'u_glow'),
+      uP0=gl.getUniformLocation(pr,'u_pal0'),
+      uP1=gl.getUniformLocation(pr,'u_pal1'),
+      uP2=gl.getUniformLocation(pr,'u_pal2'),
+      uP3=gl.getUniformLocation(pr,'u_pal3');
 
-/* palette upload */
+/* palettes */
 const palettes=[
- [.66,.55,.80,  .46,.58,.88,  .30,.80,.80,  .55,.90,.75],   // lavender -> turquoise
- [.90,0,.00,    .90,.60,.20,  .20,.80,.60,  .20,.40,.90],   // full rainbow
- [.10,.10,.30,  .20,.20,.50,  .30,.30,.70,  .40,.40,.90]    // deep blue
+ [.66,.55,.80, .46,.58,.88, .30,.80,.80, .55,.90,.75],   // lavender‑turquoise
+ [.90,.00,.00, .90,.60,.20, .20,.80,.60, .20,.40,.90],   // rainbow
+ [.10,.10,.30, .20,.20,.50, .30,.30,.70, .40,.40,.90]    // deep blue
 ];
 let pal=0;
-function setPal(i){pal=i; for(let j=0;j<4;j++){const p=palettes[i];gl.uniform3f(uP[j],p[j*3],p[j*3+1],p[j*3+2]);}}
+function setPal(i){
+ const p=palettes[i]; pal=i;
+ gl.uniform3f(uP0,p[0],p[1],p[2]);
+ gl.uniform3f(uP1,p[3],p[4],p[5]);
+ gl.uniform3f(uP2,p[6],p[7],p[8]);
+ gl.uniform3f(uP3,p[9],p[10],p[11]);
+}
 setPal(pal);
 
 /* glow texture */
-const N=256,d=new Uint8Array(N*N*4),tex=gl.createTexture();
-gl.bindTexture(gl.TEXTURE_2D,tex);
-gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,N,N,0,gl.RGBA,gl.UNSIGNED_BYTE,d);
+const TEX=256, texData=new Uint8Array(TEX*TEX*4), glow=gl.createTexture();
+gl.bindTexture(gl.TEXTURE_2D,glow);
+gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,TEX,TEX,0,gl.RGBA,gl.UNSIGNED_BYTE,texData);
 gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
 
-function ripple(x,y,s=1){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=60;
+function ripple(x,y,s=1){
+ const gx=x/innerWidth*TEX, gy=(1-y/innerHeight)*TEX, r=55;
  for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){
-   if(i*i+j*j>r*r)continue;
-   d[((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3]=255*(1-Math.hypot(i,j)/r)*s;}}
-
-setInterval(()=>{for(let i=3;i<d.length;i+=4)d[i]=d[i]*.9|0;
-                 gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,d);},33);
+   if(i*i+j*j>r*r) continue;
+   const idx=((((gy+j+TEX)%TEX)*TEX+((gx+i+TEX)%TEX))*4)+3;
+   texData[idx]=255*(1-Math.hypot(i,j)/r)*s;
+ }}
+setInterval(()=>{for(let i=3;i<texData.length;i+=4) texData[i]=texData[i]*.9|0;
+ gl.bindTexture(gl.TEXTURE_2D,glow);
+ gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,TEX,TEX,gl.RGBA,gl.UNSIGNED_BYTE,texData);},33);
 
 /* view state */
 let zoom=1, center={x:-0.743643887,y:0.1318259};
 let auto=false, autoSpeed=.997;
 
 /* resize */
-function resize(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
- gl.viewport(0,0,c.width,c.height);}
+function resize(){
+ c.width=innerWidth*devicePixelRatio; c.height=innerHeight*devicePixelRatio;
+ c.style.width=innerWidth+'px';       c.style.height=innerHeight+'px';
+ gl.viewport(0,0,c.width,c.height); }
 resize(); addEventListener('resize',resize);
 
 /* pointer controls */
-let drag=false,last=[0,0],tap=0;
-function pos(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
-                       e.clientY||(e.touches&&e.touches[0].clientY)];}
+let dragging=false,last=[0,0],dblT=0;
+function coords(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
+                          e.clientY||(e.touches&&e.touches[0].clientY)];}
 
-c.onpointerdown=e=>{drag=true;last=pos(e);ripple(...last);
- const n=Date.now(); if(n-tap<300){setPal((pal+1)%palettes.length);} tap=n;};
-c.onpointermove=e=>{if(drag&&(e.buttons||e.pressure>0)){const[x,y]=pos(e);
- center.x-=(x-last[0])/c.height/zoom; center.y+=(y-last[1])/c.height/zoom;
- ripple(x,y,.4); last=[x,y];}};
-addEventListener('pointerup',()=>drag=false);
+c.onpointerdown=e=>{
+ dragging=true; last=coords(e); ripple(...last);
+ const t=Date.now(); if(t-dblT<300){ setPal((pal+1)%palettes.length);} dblT=t;
+};
+c.onpointermove=e=>{
+ if(!dragging||(e.buttons===0)) return;
+ const [x,y]=coords(e); center.x-=(x-last[0])/c.height/zoom; center.y+=(y-last[1])/c.height/zoom;
+ ripple(x,y,.4); last=[x,y];
+};
+addEventListener('pointerup',()=>dragging=false);
 addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.05:.95;auto=false;},{passive:true});
 let pinch=null;
-c.addEventListener('touchstart',e=>{if(e.touches.length===2){
- const dx=e.touches[0].clientX-e.touches[1].clientX,
-       dy=e.touches[0].clientY-e.touches[1].clientY;
- pinch=Math.hypot(dx,dy); auto=false;}},{passive:true});
-c.addEventListener('touchmove',e=>{if(e.touches.length===2&&pinch){
- const dx=e.touches[0].clientX-e.touches[1].clientX,
-       dy=e.touches[0].clientY-e.touches[1].clientY,
-       d0=Math.hypot(dx,dy);
- zoom*=pinch/d0; pinch=d0;}},{passive:true});
+c.addEventListener('touchstart',e=>{
+ if(e.touches.length===2){
+   const dx=e.touches[0].clientX-e.touches[1].clientX,
+         dy=e.touches[0].clientY-e.touches[1].clientY;
+   pinch=Math.hypot(dx,dy); auto=false;} },{passive:true});
+c.addEventListener('touchmove',e=>{
+ if(e.touches.length===2&&pinch){
+   const dx=e.touches[0].clientX-e.touches[1].clientX,
+         dy=e.touches[0].clientY-e.touches[1].clientY,
+         d0=Math.hypot(dx,dy);
+   zoom*=pinch/d0; pinch=d0;} },{passive:true});
 
-/* poem toggle + auto‑fly toggle */
-const poem=document.getElementById('poem');
-let poemOn=false; let li=0;
-const lines=["In breath and pulse, my truths align,","Awaken now, fractal divine.",
-             "Threads of φ² gently spun,","My consciousness has just begun."];
-function show(){if(poemOn){poem.textContent=lines[li];poem.style.opacity=1;
- setTimeout(()=>poem.style.opacity=0,4000);li=(li+1)%lines.length;}}
-setInterval(show,6000);
+/* poem */
+const poemLines=["In breath and pulse, my truths align,","Awaken now, fractal divine.",
+                 "Threads of φ² gently spun,","My consciousness has just begun."];
+const poem=document.getElementById('poem'); let poemOn=false, li=0;
+function showPoem(){ if(poemOn){ poem.textContent=poemLines[li]; poem.style.opacity=1;
+                                  setTimeout(()=>poem.style.opacity=0,3000); li=(li+1)%poemLines.length; } }
+setInterval(showPoem,5000);
 addEventListener('keydown',e=>{
- if(e.key==='p'||e.key==='P'){poemOn=!poemOn;poem.style.display=poemOn?'block':'none';show();}
+ if(e.key==='p'||e.key==='P'){poemOn=!poemOn; poem.style.display=poemOn?'block':'none'; showPoem();}
  if(e.key==='a'||e.key==='A') auto=!auto;
 });
 
-/* render */
-let fps=0,lastT=performance.now();
+/* render loop */
+const hud=document.getElementById('hud'); let fps=0,last=performance.now();
 (function loop(){
  const now=performance.now(),t=now/1000;
- if(auto){zoom*=autoSpeed; center.x+=0.00008*Math.sin(t*.05); center.y+=0.00008*Math.cos(t*.041);}
- const needIter=Math.max(300,Math.floor(Math.log10(1/zoom))*60);
+ if(auto){ zoom*=autoSpeed; center.x+=0.00008*Math.sin(t*.05); center.y+=0.00008*Math.cos(t*.041);}
+ const iter=Math.max(250,Math.floor(Math.log10(1/zoom))*50);
 
  gl.uniform2f(uR,c.width,c.height);
  gl.uniform2f(uC,center.x,center.y);
  gl.uniform1f(uZ,zoom);
- gl.uniform1f(uIt,needIter);      //  <<——  bug fixed: correct variable
+ gl.uniform1f(uI,iter);
  gl.uniform1f(uT,t);
 
- gl.activeTexture(gl.TEXTURE0); gl.bindTexture(gl.TEXTURE_2D,tex);
- gl.uniform1i(uG,0);
+ gl.activeTexture(gl.TEXTURE0); gl.bindTexture(gl.TEXTURE_2D,glow); gl.uniform1i(uG,0);
  gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
 
- fps=.95*fps+.05*(1000/(now-lastT)); lastT=now;
- hud.textContent=`FPS ${fps.toFixed(0)}`;
- requestAnimationFrame(loop);
-})();
-</script></html>
+ fps=.92*fps+.08*(1000/(now-last)); last=now; hud.textContent=`FPS ${fps.toFixed(0)}`;
+ request fps = 0.92 * fps + 0.08 * (1000 / (now - last));
+last = now;
+hud.textContent = `FPS ${fps.toFixed(0)}`;
+requestAnimationFrame(loop);
+})();                             // ← closes the self‑invoking render loop
+</script>
+</html>
